@@ -1,12 +1,10 @@
 package lv.visma.consulting.usercountriesapi.services;
 
 import lv.visma.consulting.usercountriesapi.controllers.dto.CountryDto;
-import lv.visma.consulting.usercountriesapi.db.entities.CountryEntity;
 import lv.visma.consulting.usercountriesapi.db.repositories.CountryRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CountryService {
@@ -19,10 +17,7 @@ public class CountryService {
     public List<CountryDto> getAllCountries() {
         return countryRepository.findAll()
                 .stream()
-                .map(country -> {
-                    CountryDto dto = new CountryDto(country.getId(), country.getName(), country.getCode(), List.of());
-                    return dto;
-                })
-                .collect(Collectors.toList());
+                .map(country -> new CountryDto(country.getId(), country.getName(), country.getCode(), List.of()))
+                .toList();
     }
 }
